--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <body>
     <h1>Paris</h1>
     <footer>
-      This project was coded by Alex F and is on GitHub and hosted on Netlify
+      This project was coded by
+      <a href="https://github.com/dashboard" target="_blank">Alex F</a> and is
+      on
+      <a
+        href="https://github.com/Alex-346/SheCodes-Plus-Weather-App-Two"
+        target="_blank"
+        >GitHub</a
+      >
+      and hosted on
+      <a href="https://weather-app-scp.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </body>
 </html>
