Created city weather search form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>SheCodes Plus Weather App Two</title>
   </head>
   <body>
+    <header>
+      <form>
+        <input type="submit" placeholder="Enter a city" required />
+        <input type="search" value="Go!" />
+      </form>
+    </header>
     <h1>Paris</h1>
     <footer>
       This project was coded by
