Updated html; added paragraphs with main weather details

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
         <input type="search" value="Go!" />
       </form>
     </header>
-    <h1>Paris</h1>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Wednesday 19:33, moderate rain <br />
+          Humidity: 87%, Wind: 7.2km/h
+        </p>
+      </div>
+      <div>🌤️ 12°C</div>
+    </main>
     <footer>
       This project was coded by
       <a href="https://github.com/dashboard" target="_blank">Alex F</a> and is
