--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="submit" placeholder="Enter a city" required />
-          <input type="search" value="Go!" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city"
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Go!" class="search-form-button" />
         </form>
       </header>
       <main>
