Initial styling on header, footer and main paragraph

--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Wednesday 19:33, moderate rain <br />
-            Humidity: 87%, Wind: 7.2km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
+              Wednesday 19:33, moderate rain <br />
+              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature">🌤️ 12°C</div>
         </div>
-        <div>🌤️ 12°C</div>
       </main>
       <footer>
         This project was coded by
