--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">🌤️</div>
+            <div id="icon">
+              <img
+                class="weather-app-icon"
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
+              />
+            </div>
             <div
               class="weather-app-temperature"
               id="weather-app-temperature"
