--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
+
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="weather-forecast-date">Tue</div>
+              <div class="weather-forecast-icon">🌤️</div>
+              <div class="weather-forecast-temperatures">
+                <span class="weather-forecast-temperature-max"
+                  ><strong>22°</strong></span
+                >
+                <span class="weather-forecast-temperature-min">16°</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         This project was coded by
