Injected forecast html from js and updated its css

--- a/index.html
+++ b/index.html
@@ -52,20 +52,8 @@
           </div>
         </div>
 
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="weather-forecast-date">Tue</div>
-              <div class="weather-forecast-icon">🌤️</div>
-              <div class="weather-forecast-temperatures">
-                <span class="weather-forecast-temperature-max"
-                  ><strong>22°</strong></span
-                >
-                <span class="weather-forecast-temperature-min">16°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast">
+          
       </main>
       <footer>
         This project was coded by
